2009-03-10  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/amstatus.pl: Print "failed: process terminated while" for
				  dead run. Change "wait for" for "waiting for".

2009-03-10  Jean-Louis Martineau <martineau@zmanda.com>
	* application-src/amstar.c: ONE-FILE-SYSTEM is deprecated.
	* man/xml-source/amstar.8.xml: Document it.

2009-03-10  Dustin J. Mitchell <dustin@zmanda.com>
	* common-src/conffile.c: Set default TAPETYPE_FILEMARK to 1.

2009-03-09  Nikolas Coukouma <atrus@zmanda.com>
	* man/xslt/html.xsl.in: use UTF-8 when generating man page HTML

2009-03-09  Nikolas Coukouma <atrus@zmanda.com>
	* application-src/ampgsql.pl:
	  set environment variables when running psql (from selfcheck)

2009-03-07  Nikolas Coukouma <atrus@zmanda.com>
	* application-src/ampgsql.pl: add selfcheck to ampgsql

2009-03-06  Dustin J. Mitchell <dustin@zmanda.com>
	* perl/Amanda/Changer/rait.pm: replace die() with a proper error
	  return

2009-03-06  Dustin J. Mitchell <dustin@zmanda.com>
	* Makefile.am config/libtool.m4 config/ltmain.sh config/ltoptions.m4
	  config/ltsugar.m4 config/ltversion.m4 config/lt~obsolete.m4
	  configure.in: upgrade to libtool-2.2.4

2009-03-06  Dustin J. Mitchell <dustin@zmanda.com>
	* restore-src/restore.c: remove incorrect assertion

2009-03-06  Dustin J. Mitchell <dustin@zmanda.com>
	* common-src/amfeatures.c: fix am_string_to_feature to fail correctly
	  on a bad feature string

2009-03-06  Dustin J. Mitchell <dustin@zmanda.com>
	* Makefile.am: always build xfer-src, on client or server
	* xfer-src/Makefile.am xfer-src/xfer-element.h device-src/Makefile.am
	  device-src/xfer-device.h device-src/xfer-dest-device.c
	  device-src/xfer-source-device.c: move device-specific xfer elts to
	  device-src
	* perl/amglue/amglue.h perl/amglue/objwrap.c perl/amglue/xferwrap.c:
	  generic glue
	* perl/Makefile.am perl/Amanda/Xfer.swg perl/Amanda/XferDevice.swg:
	  only import server-specific symbols if they are available